--- a/cliff.toml
+++ b/cliff.toml
@@ -73,7 +73,7 @@ commit_parsers = [
   { message = "^revert", group = "<!-- 10 -->◀️ Revert" },
   { message = "^conf", group = "<!-- 11 -->🗂 Config" },
   { message = "^devcontainer", group = "<!-- 12 -->🧰 Dev Container" },
-  { message = "^coral", group = "<!-- 13 -->🪸 Coral" },
+  { message = "^debug", group = "<!-- 13 -->🐛 Debug" },
 ]
 # protect breaking changes from being skipped due to matching a skipping commit_parser
 protect_breaking_commits = false
