picosdk(setup): add pico sdk project directory

--- a/cliff.toml
+++ b/cliff.toml
@@ -74,6 +74,7 @@ commit_parsers = [
   { message = "^conf", group = "<!-- 11 -->🗂 Config" },
   { message = "^devcontainer", group = "<!-- 12 -->🧰 Dev Container" },
   { message = "^debug", group = "<!-- 13 -->🐛 Debug" },
+  { message = "^picosdk", group = "<!-- 14 -->🍓 Pico SDK" },
 ]
 # protect breaking changes from being skipped due to matching a skipping commit_parser
 protect_breaking_commits = false
