--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,18 @@ INFO_UF2.TXT
 
 # dev container
 /.devcontainer/scripts/data.tmp
+
+# Cmake
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+build/
+.ccls-cache/
