--- a/cliff.toml
+++ b/cliff.toml
@@ -76,6 +76,7 @@ commit_parsers = [
   { message = "^debug", group = "<!-- 13 -->🐛 Debug" },
   { message = "^picosdk", group = "<!-- 14 -->🍓 Pico SDK" },
   { message = "^micropython", group = "<!-- 15 -->🐍 MicroPython" },
+  { message = "^circuitpython", group = "<!-- 16 -->🐍 CircuitPython" },
 ]
 # protect breaking changes from being skipped due to matching a skipping commit_parser
 protect_breaking_commits = false
