--- a/cliff.toml
+++ b/cliff.toml
@@ -77,6 +77,7 @@ commit_parsers = [
   { message = "^picosdk", group = "<!-- 14 -->🍓 Pico SDK" },
   { message = "^micropython", group = "<!-- 15 -->🐍 MicroPython" },
   { message = "^circuitpython", group = "<!-- 16 -->🐍 CircuitPython" },
+  { message = "^arduino", group = "<!-- 17 -->♾ Arduino" },
 ]
 # protect breaking changes from being skipped due to matching a skipping commit_parser
 protect_breaking_commits = false
