--- a/cliff.toml
+++ b/cliff.toml
@@ -78,6 +78,7 @@ commit_parsers = [
   { message = "^micropython", group = "<!-- 15 -->🐍 MicroPython" },
   { message = "^circuitpython", group = "<!-- 16 -->🐍 CircuitPython" },
   { message = "^arduino", group = "<!-- 17 -->♾ Arduino" },
+  { message = "^rust", group = "<!-- 18 -->🦀 Rust" },
 ]
 # protect breaking changes from being skipped due to matching a skipping commit_parser
 protect_breaking_commits = false
